--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "firebase": "^11.8.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
+    "react-simple-image-slider": "^2.4.1",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
