--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
     "react-simple-image-slider": "^2.4.1",
+    "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
