--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@tailwindcss/vite": "^4.1.7",
     "firebase": "^11.8.0",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
     "react-simple-image-slider": "^2.4.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-tooltip": "^5.28.1",
     "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.7"
   },
